# marsSEWIP

./: CMakeLists.txt  Makefile  grub.cfg
source/kernel/: ng.hpp
source/kernel/boot/: crs.s  main.cpp  memory.cpp  multiboot.cpp  multiboot.s  paging.cpp  panic.cpp
source/kernel/boot/include/: main.hpp  memory.hpp  multiboot.hpp  paging.hpp  panic.hpp  segmentation.hpp
source/kernel/console/: console.cpp
source/kernel/console/include/: console.hpp
source/kernel/memory/: rolo.cpp  rolo.hpp
